# astrologica

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  release.sh
.github/workflows/: ci.yml  publish.yml
src/astrologica/: __init__.py  angle.py  antiscion.py  aspect.py  chart.py  chart_data.py  custom_lot.py  dignity.py  diurnal.py  dodecatemorion.py  ecliptic.py  ephemeris.py  find_time.py  fixed_stars.py  horary.py  house.py  lot.py  midpoints.py  place.py  planet.py  planetary_hours.py  primary_directions.py  returns.py  rise_set.py  rising_times.py  secondary_progressions.py  sign.py  swisseph.py  syzygy.py  transits.py  zodiacal_releasing.py
src/astrologica/_data/: sefstars.txt
src/astrologica/_internal/domain/: antiscion.py  ayanamsa.py  diurnal.py  dodecatemorion.py  find_time.py  fixed_stars.py  fixed_stars_enum.py  lunar_return.py  midpoints.py  place.py  planetary_hours.py  reference_frame.py  rise_set.py  rising_times.py  secondary_progressions.py  sign.py  solar_return.py  zodiacal_releasing.py
src/astrologica/_internal/domain/aspect/: __init__.py  aspect.py  compute.py  kind.py
src/astrologica/_internal/domain/chart/: __init__.py  chart.py  chart_data.py  compute.py  tradition.py
src/astrologica/_internal/domain/custom_lot/: __init__.py  component.py  compute.py  custom_lot.py  formula.py
src/astrologica/_internal/domain/dignity/: __init__.py  compute.py  dignity.py
src/astrologica/_internal/domain/horary/: __init__.py  chart.py  compute.py
src/astrologica/_internal/domain/house/: __init__.py  compute.py  cusp.py  house.py  system.py
src/astrologica/_internal/domain/lot/: __init__.py  compute.py  lot.py  position.py
src/astrologica/_internal/domain/measures/: __init__.py  angle.py  ecliptic.py  jd.py
src/astrologica/_internal/domain/planet/: __init__.py  compute.py  planet.py  position.py
src/astrologica/_internal/domain/primary_directions/: __init__.py  approach.py  arc_key.py  compute.py  direction_type.py  speculum.py
src/astrologica/_internal/ports/: ephemeris.py
src/astrologica/geo/: __init__.py  _coerce.py  chart.py  chart_data.py  elevation.py  horary.py  place_lookup.py  timezone.py
tests/: conftest.py
tests/domain/: test_antiscion.py  test_ayanamsa.py  test_custom_lot.py  test_diurnal.py  test_dodecatemorion.py  test_find_time.py  test_fixed_stars.py  test_horary.py  test_midpoints.py  test_planetary_hours.py  test_primary_directions.py  test_reference_frame.py  test_returns.py  test_rise_set.py  test_rising_times.py  test_secondary_progressions.py  test_zodiacal_releasing.py
tests/domain/aspect/: test_compute.py
tests/domain/chart/: test_chart_data.py  test_composition.py  test_compute.py  test_tradition.py
tests/domain/dignity/: test_compute.py  test_terms_system.py
tests/domain/lot/: test_compute.py
tests/domain/measures/: test_angle.py  test_jd.py
tests/domain/planet/: test_planet.py
tests/domain/syzygy/: test_compute.py
tests/domain/transits/: test_compute.py  test_find.py
tests/facade/: test_public_imports.py
tests/fakes/: fake_ephemeris.py
tests/geo/: test_horary.py  test_natal.py  test_place_lookup.py  test_timezone.py
tests/infrastructure/: test_swiss_adapter.py
(+17 files in other folders)
